--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Playwright
 node_modules/
 /test-results/
+# Playwright + Allure auto-generated artifacts
+allure-results/
+allure-report/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
