--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "qa_playwright_ts_project",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "pretest": "rimraf test-results",
+    "test": "npx playwright test",
+    "allure:generate": "npx allure generate test-results/allure-results --clean",
+    "allure:open": "npx allure open"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.53.1",
-    "@types/node": "^24.0.4"
+    "@types/node": "^24.0.4",
+    "allure-commandline": "^2.34.1",
+    "allure-playwright": "^3.3.0",
+    "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^17.1.0"
   }
 }
