--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -40,3 +40,9 @@ jobs:
         name: allure-report
         path: allure-report/
         retention-days: 30
+    - name: Upload Playwright HTML Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: playwright-html-report
+        path: playwright-report/
+        retention-days: 30
